# derive-patch

./: .conform.yaml  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  commitmessage  rustfmt.toml  setup-git.sh
.github/actions-rs/: grcov.yml
.github/workflows/: conform.yml  rust.yml
.rusty-hooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
macro_impl/: Cargo.toml
macro_impl/src/: lib.rs
src/: assert.rs  lib.rs  mismatch.rs  patchable.rs  traits.rs
src/diff/: copy.rs  mod.rs  numeric_distance.rs  traits.rs
tests/: template_partial.rs  template_patch.rs
