[package]
name = "derive-patch"
description = "Macro to generate a struct with all field Optional (`partial!`) and another macro to generate a patch (`patch!`)."
version = "0.0.1"
authors = ["Marcel Lambert <marcel_lambert@ymail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE.md"
categories = ["data-structures", "no-std", "rust-patterns"]
keywords = ["partial", "patch", "derive"]
documentation = "https://docs.rs/derive-patch/0.0.1/derive_patch/"
repository = "https://github.com/Fice/derive-patch"
homepage = "https://github.com/Fice/derive-patch/issues"
exclude = [
    ".rusty-hooks/*",
    "commitmessage",
    "setup-git.sh",
    ".conform.yaml",
]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["epsilon_compare",]

epsilon_compare = []

[dependencies]
num = "0.2.1"
macro_impl = { path = "./macro_impl" }
serde = { version ="^1.0.106", features = ["derive"], optional = true}


[dev-dependencies]
clippy = "^0"
clog-cli = "^0.9.3"

